@@ -1,41 +1,10 @@
 
 - allow traveling to other planets by re-enabling their technologies
 
-- implement questbook
-
 - add hidden loot upon hex claim
 
 - add claim tool
 
-- fix resource generation w.r.t. map gen settings
-
-- make checkboxes for trades do something (toggle activity in hex core)
-
-- adjust circuit connection points on hex cores
-
-- add upgrade for hex cores to have more inputs
-
-- add info to show total resources in hex
-
-- add "inserter" arrows for hex cores
-
-- make copper more frequent than iron farther from center
-
-- make water tiles have hex cores and, on claim, fill in only the inside of the hex
-
-- make miniloaders a dependency so that hex cores can stack items onto belts
-
 - make spoilable items have a bonus to their value
 
-- add option (on by default) for concrete colors to cycle based on distance from spawn
-
-
-
-
 - make item value tooltip show for interplanetary items in hex core trades
-
-
-
-MOST IMPORTANT:
-
-questbook
